# SCUT

./: README.md  常用网站.md  第二周周记.docx  计算机概论考前复习.md
C++程序设计/: 07级C++I试卷(A)_答案.doc  2009年C++（I）双语_试卷A.doc  2018-2019年高级语言程序设计（C++）（上）期末试卷 解答.doc  c下复习一览.md  read.md  类与对象笔记.md
C++课程实验/BomLook/: README.md
JAVA/: 面向考试
JAVA/面向考试/: Java选择题题库.md  README  【包打听分享】JAVA_选择题题库.doc
UML/: 15级 考试题型.txt  2007级《软件需求分析、设计与建模》_A卷.doc  2007级《软件需求分析、设计与建模》_B卷.doc  2010-OOSAD-A彩印.doc  2013级《软件需求分析、设计与建模》_B卷.doc  2017年 UML考点整理.docx  华南理工软件学院2015期末考试-软件需求分析设计B卷(不全).doc  复习资料.md  海量选择题.doc  简答题样题1(含答案).doc
UML/0宝/: 0宝的UML复习.md
UML/复习/: 20自整理 UML画图.ppt  软需 往年部分简答题考点整理.docx.docx  软需 往年部分选择题考点整理.docx
UML/实验/: UML实验.docx  read.md
个人笔记篇/: read.md
个人笔记篇/TOTORO/: Lec5 Hashing.md  Lec6 Graphs.md  Lec7 Sorting(2).md  Lec7 Sorting(3).md  Lec7 Sorting(5).md  Lec9 Graph Algorithms(2).md  lec3 List Stack Queue（1).md  lec4 Trees(1).md  read.md  基数排序.md  拷贝控制.md  汇编语言入门.md  计算机操作系统.md  计算机组成原理2020级考题.md  计算机组成原理总复习.md  计组习题的那些事（6）.md
其它资料(课程、四六级....)/音乐美学/: README.md
大一上课程资料/习近平新时代中国特色社会主义思想概论/: README.md
大一上课程资料/学术英语（一）/: README.md
大一上课程资料/工科数学分析(一)/: README.md
大一上课程资料/工程制图/: readme.md
大一上课程资料/形势与政策/: README.md
大一上课程资料/线性代数与解析几何/: readme.md
大一上课程资料/计算机与软件工程基础研讨/: README.md
大一上课程资料/高级语言程序设计(C++)(上)/: README.md
大一下课程资料/C++程序开发实训/: 2023级实训计划及要求 dq.docx  README.md  readme.md
大一下课程资料/C++程序开发实训/BomLook/源代码/: ACDialog.cpp  ACDialog.h  CMakeLists.txt  Cell.cpp  Cell.h  Funny.cpp  Funny.h  Game.cpp  Game.h  GameIntroduction.cpp  GameIntroduction.h  Home.cpp  Home.h  Home.ui  LevelTwo.cpp  LevelTwo.h  Login.cpp  Login.h  Login.ui  MAP.qrc  MapChoose.cpp  MapChoose.h  MyMainWindow.cpp  MyMainWindow.h  MyMainWindow.ui  Player.cpp  Player.h  README.md  RandomMap.cpp  Ranking.cpp  Ranking.h  Ranking.ui  Register.cpp  Register.h  Register.ui  TimeWatch.cpp  TimeWatch.h  WADialog.cpp  WADialog.h  main.cpp  (+2 more)
大一下课程资料/四史/: readme.md
大一下课程资料/大学物理Ⅲ(一)/: README.md
大一下课程资料/大学物理实验(一)/: README.md
大一下课程资料/学术英语（二）/: README.md
大一下课程资料/工科数学分析(二)/: README.md
大一下课程资料/形势与政策/: README.md
大一下课程资料/思想道德与法治/: README.md
大二上课程资料/: README.md
大二下课程资料/: README.md
大学物理/: 2020级大学物理（I）期末试卷解答（B卷）.doc  2023级大学物理(上)期末考试复习纲要（4学分）.doc
大学物理实验/: 1-Introduction-20240326(v1).ppt  read.md
学术英语/: read.md
工科数学分析/: read.me  函数与极限测试题.doc  第二章单元小测题 3.docx
微积分/: read.md
操作系统/: 答案.md
操作系统/非题资料/: NOTE.md
数字逻辑/: 二进制.md  复习资料
数据库/: 【包打听分享】数据库复习.rar
数据结构/: 数据结构核心应对方案（看到请补充）.md
新生入学考/: 2016级新生入学考试题答案(1).doc  2016级新生入学考试题答案a.doc  2017级新生入学考试题a.docx  华南理工大学入学(数学)考试资料 (2).doc  华工大新生入学考试试卷与解答2009 (1).doc  华工大新生入学考试试卷与解答2010.doc  各院（系）接收2023年本科生自主转专业报名条件及名额.doc  英语入学考试复习资料（1）.docx  英语入学考试复习资料（2）.doc
概率论与数理统计/: readme.md  【包打听分享】2015概率试卷及答案.docx  【包打听分享】2020概率论与数理统计A卷 答案.docx  【包打听分享】概率论与数理统计试卷及答案.doc  概率论与数理统计笔记.md
离散数学/: 2022级离散数学回忆版.docx  read.md  离散数学应对方案.md  笔记整理
算法设计与分析/: 8-Dynamic Programming-20240502(v2).ppt  书面作业2-20240428(v1).docx
线性代数/: read.md
编译原理/: 2021编译卷 可参考 (1).docx  编译技术第七讲思考题题目.pptx
美赛/: 2023美赛（常规赛）O奖论文 (无水印)(1).lnk
计算机科学概论/: README.md  【包打听分享】2022计算机与软件工程概论试卷A.doc  【包打听分享】2022计算机与软件工程概论试卷B.doc  【包打听分享】7复习资料练习题.doc  计算机科学概论.md  计算机科学概论模拟测试.md  计算机科学概论考前复习.md
计算机组成原理/: SCUT2010A-COAA.md  SCUT2010B-COAA.md  SCUT2011B-COAA.md  【包打听分享】2013计算机组成期末考试B卷.doc  【包打听分享】20计算机组成考题.txt
计算机网络/: 15 刘志计网复习课重点整理.docx  2017题型与考点.docx  《计算机网络》期中考试试题.doc  【包打听分享】计算机网络期末考试试题.doc  每一层的相关概念.txt  计算机网络.xmind  计算机网络概念.md  计网 中英术语对照.txt
近代史/: README.md
音乐美学/: README.md
马哲/: README.md
(+2590 files in other folders)
